--- a/PlantAlarm/Views/NewPlantPage.xaml
+++ b/PlantAlarm/Views/NewPlantPage.xaml
@@ -10,81 +10,82 @@
         <ToolbarItem Text="Add" Command="{Binding AddPlantCommand}" />
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout Margin="10">
-
-            <StackLayout BackgroundColor="#9CC45D" Padding="8">
-                <Label Text="Basic Info" FontSize="22" FontAttributes="Bold" TextColor="White"/>
-                <BoxView HeightRequest="1" Color="White" Margin="-3,0,-3,5" />
-                <Grid HeightRequest="30">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*" />
-                        <ColumnDefinition Width="8*" />
-                    </Grid.ColumnDefinitions>
-                    <Label Text="Name" VerticalOptions="Center" FontAttributes="Bold" TextColor="White"/>
-                    <Entry HorizontalOptions="Fill" Grid.Column="1" HorizontalTextAlignment="End" TextColor="White"
-                           Text="{Binding PlantName}" FontAttributes="Italic" BackgroundColor="Transparent">
-                        <Entry.Effects>
-                            <customEffects:BorderlessEffect />
-                        </Entry.Effects>
-                    </Entry>
-                </Grid>
-                <BoxView HeightRequest="1" Color="#BDD893"/>
-                <Grid HeightRequest="30">
-                    <Grid.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding ShowCategorySelectorPageCommand}" />
-                    </Grid.GestureRecognizers>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*"/>
-                        <ColumnDefinition Width="8*" />
-                    </Grid.ColumnDefinitions>
-                    <Label Text="Categories" VerticalOptions="Center" Grid.Column="0" FontAttributes="Bold" TextColor="White"/>
-                    <Label Text="{Binding SelectedCategoriesMessage}" VerticalOptions="Center"
-                           Grid.Column="1" LineBreakMode="WordWrap" MaxLines="2" FontAttributes="Italic"
-                           HorizontalOptions="End" TextColor="{Binding CategoriesTextColor}"/>
-                </Grid>
-
-                <StackLayout.Effects>
-                    <customEffects:RoundedCornerEffect Radius="8" />
-                </StackLayout.Effects>
-            </StackLayout>
-
-            <StackLayout BackgroundColor="#7AA835" Padding="8">
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Picture" FontSize="22" FontAttributes="Bold" TextColor="White"
-                       VerticalOptions="Center" HorizontalOptions="StartAndExpand"/>
-                    <Button Text="{Binding PhotoOptionsText}" Command="{Binding AddPhotoCommand}" HorizontalOptions="End" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"
-                            TextColor="#4A6520" BackgroundColor="#C8DEA5" BorderRadius="5" Padding="5,0,5,0" HeightRequest="25"/>
-                </StackLayout>
-                <BoxView HeightRequest="1" Margin="-3,0,-3,0" Color="White" />
-                <Label Text="You can add more pictures later to track progress." TextColor="#BDD893" FontAttributes="Italic"
-                       Margin="0,5,0,5" FontSize="11" LineBreakMode="WordWrap" />
-                <customControls:SquaredImageContainerStack HorizontalOptions="FillAndExpand">
-                    <Grid>
-                        <StackLayout IsVisible="{Binding HasPhoto}">
-                            <customControls:SquaredImage Source="{Binding PhotoToAdd.Url}" HorizontalOptions="FillAndExpand"
-                                                         Aspect="AspectFill">
-                                <customControls:SquaredImage.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding ShowPhotoOptionsCommand}" />
-                                </customControls:SquaredImage.GestureRecognizers>
-                                <customControls:SquaredImage.Effects>
-                                    <customEffects:RoundedCornerEffect Radius="7" />
-                                    <customEffects:BorderEffect Color="White" Thickness="2" />
-                                </customControls:SquaredImage.Effects>
-                            </customControls:SquaredImage>
-
-                            <StackLayout.Behaviors>
-                                <customBehaviors:FadingBehavior />
-                            </StackLayout.Behaviors>
-                        </StackLayout>
+        <StackLayout BackgroundColor="#F5F9EE">
+            <customControls:ShadowLayout OffsetY="2" ShadowRadius="8" ShadowOpacity="0.6" Padding="1,0,1,2">
+                <customControls:GradientStackLayout GradientFromColor="#7CC45D" GradientToColor="#9CC45D" GradientDirection="ToTopRight" Padding="8" Margin="10,10,10,0">
+                    <Label Text="Basic Info" FontSize="22" FontAttributes="Bold" TextColor="White"/>
+                    <BoxView HeightRequest="1" Color="White" Margin="-3,0,-3,5" />
+                    <Grid HeightRequest="30">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="3*" />
+                            <ColumnDefinition Width="8*" />
+                        </Grid.ColumnDefinitions>
+                        <Label Text="Name" VerticalOptions="Center" FontAttributes="Bold" TextColor="White"/>
+                        <Entry HorizontalOptions="Fill" Grid.Column="1" HorizontalTextAlignment="End" TextColor="White"
+                               Text="{Binding PlantName}" FontAttributes="Italic" BackgroundColor="Transparent">
+                            <Entry.Effects>
+                                <customEffects:BorderlessEffect />
+                            </Entry.Effects>
+                        </Entry>
                     </Grid>
-                </customControls:SquaredImageContainerStack>
+                    <BoxView HeightRequest="1" Color="#BDD893"/>
+                    <Grid HeightRequest="30">
+                        <Grid.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding ShowCategorySelectorPageCommand}" />
+                        </Grid.GestureRecognizers>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="3*"/>
+                            <ColumnDefinition Width="8*" />
+                        </Grid.ColumnDefinitions>
+                        <Label Text="Categories" VerticalOptions="Center" Grid.Column="0" FontAttributes="Bold" TextColor="White"/>
+                        <Label Text="{Binding SelectedCategoriesMessage}" VerticalOptions="Center"
+                               Grid.Column="1" LineBreakMode="WordWrap" MaxLines="2" FontAttributes="Italic"
+                               HorizontalOptions="End" TextColor="{Binding CategoriesTextColor}"/>
+                    </Grid>
 
-                
-                <StackLayout.Effects>
-                    <customEffects:RoundedCornerEffect Radius="8" />
-                </StackLayout.Effects>
-            </StackLayout>
+                    <StackLayout.Effects>
+                        <customEffects:RoundedCornerEffect Radius="8" />
+                    </StackLayout.Effects>
+                </customControls:GradientStackLayout>
+            </customControls:ShadowLayout>
             
+            <customControls:ShadowLayout OffsetY="2" ShadowRadius="8" ShadowOpacity="0.6" Padding="1,0,1,2">
+                <customControls:GradientStackLayout GradientFromColor="#648A2C" GradientToColor="#7AA835" GradientDirection="ToTopRight" Padding="8" Margin="10">
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Picture" FontSize="22" FontAttributes="Bold" TextColor="White"
+                           VerticalOptions="Center" HorizontalOptions="StartAndExpand"/>
+                        <Button Text="{Binding PhotoOptionsText}" Command="{Binding AddPhotoCommand}" HorizontalOptions="End" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"
+                                TextColor="#4A6520" BackgroundColor="#C8DEA5" BorderRadius="5" Padding="5,0,5,0" HeightRequest="25"/>
+                    </StackLayout>
+                    <BoxView HeightRequest="1" Margin="-3,0,-3,0" Color="White" />
+                    <Label Text="You can add more pictures later to track progress." TextColor="#BDD893" FontAttributes="Italic"
+                           Margin="0,5,0,5" FontSize="11" LineBreakMode="WordWrap" />
+                    <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="Transparent">
+                        <Grid BackgroundColor="Transparent">
+                            <StackLayout IsVisible="{Binding HasPhoto}">
+                                <customControls:SquaredImage Source="{Binding PhotoToAdd.Url}" HorizontalOptions="FillAndExpand"
+                                                             Aspect="AspectFill">
+                                    <customControls:SquaredImage.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding ShowPhotoOptionsCommand}" />
+                                    </customControls:SquaredImage.GestureRecognizers>
+                                    <customControls:SquaredImage.Effects>
+                                        <customEffects:RoundedCornerEffect Radius="7" />
+                                        <customEffects:BorderEffect Color="White" Thickness="2" />
+                                    </customControls:SquaredImage.Effects>
+                                </customControls:SquaredImage>
+
+                                <StackLayout.Behaviors>
+                                    <customBehaviors:FadingBehavior />
+                                </StackLayout.Behaviors>
+                            </StackLayout>
+                        </Grid>
+                    </StackLayout>
+                
+                    <StackLayout.Effects>
+                        <customEffects:RoundedCornerEffect Radius="8" />
+                    </StackLayout.Effects>
+                </customControls:GradientStackLayout>
+            </customControls:ShadowLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
