--- a/PlantAlarm/Views/RootPages/TasksPage.xaml
+++ b/PlantAlarm/Views/RootPages/TasksPage.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<rootpages:RootPage  xmlns:rootpages="clr-namespace:PlantAlarm.Views.RootPages"
-                     xmlns="http://xamarin.com/schemas/2014/forms" 
-                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                     x:Class="PlantAlarm.Views.RootPages.TasksPage"
-                     xmlns:customControls="clr-namespace:PlantAlarm.CustomControls"
-                     xmlns:customEffects="clr-namespace:PlantAlarm.Effects"
-                     xmlns:behaviors="clr-namespace:PlantAlarm.Behaviors"
-                     Title="Tasks">
+<rootpages:SafeAreaRespectingPage  xmlns:rootpages="clr-namespace:PlantAlarm.Views.RootPages"
+                                   xmlns="http://xamarin.com/schemas/2014/forms" 
+                                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                                   x:Class="PlantAlarm.Views.RootPages.TasksPage"
+                                   xmlns:customControls="clr-namespace:PlantAlarm.CustomControls"
+                                   xmlns:customEffects="clr-namespace:PlantAlarm.Effects"
+                                   xmlns:behaviors="clr-namespace:PlantAlarm.Behaviors"
+                                   Title="Tasks">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="New Task" Command="{Binding ShowNewTaskPageCommand}" />
     </ContentPage.ToolbarItems>
@@ -24,4 +24,4 @@
             </CollectionView>-->
         </customControls:GradientStackLayout>
     </ContentPage.Content>
-</rootpages:RootPage>
+</rootpages:SafeAreaRespectingPage>
